--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body id="body">
 
-    <audio id="mp3" src="./static/love is gone.mp3"></audio>
+    <audio id="mp3" src="./static/love is gone1.mp3"></audio>
 
     <button id="playButton">播放</button>
 
@@ -21,7 +21,7 @@
         <h1 id="t1"></h1>
         <h1 id="t2"></h1>
     </div>
-
+<div></div>
     <div id="lyricsContainer2">
     </div>
 
